ClientApp/src/styles.css
/* You can add global styles to this file, and also import other style files */

/* The switch - the box around the slider */
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
  }
  
  /* Hide default HTML checkbox */
  .switch input {display:none;}
  
  /* The slider */
  .slider {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #ccc;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  .slider:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: white;
    -webkit-transition: .4s;
    transition: .4s;
  }
  
  input:checked + .slider {
    background-color: #2196F3;
  }
  
  input:focus + .slider {
    box-shadow: 0 0 1px #2196F3;
  }
  
  input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
  }
  
  /* Rounded sliders */
  .slider.round {
    border-radius: 34px;
  }
  
  .slider.round:before {
    border-radius: 50%;
  }

  /* Global */
  
  a:hover {color: #B4261B;}
  app-home .btn-primary:hover,
  app-add-task .btn-primary:hover,
  app-settings .btn-primary:hover {
    background-color: #B4261B;
    border: 0;
  }
  body {
    margin:0;
    padding:0;
  }

  /* Navigation Menu */
  .navbar-inverse {
    background-color: #EE493B !important;
    border-color: #EE493B !important;
  }
  .navbar-inverse .navbar-nav>li>a {
    color: #fff !important;
}
.navbar-nav {
  margin: 0 !important;
}
  .navbar-header {display:none;}
  .navbar {margin-bottom: 0 !important;}
  .main-nav[_ngcontent-c1] {bottom:0;top:unset !important;}

  .nav>li:first-child {display:none !important;}
  .nav>li {
    display: inline-block !important;
    width: 32%;
    text-align: center;
}
.navbar-inverse .navbar-nav>li:nth-child(3)>a {
  background-color: #B4261B !important;
  border-radius: 58px;
  font-size: 1.5em;
  font-weight: 100;
  line-height: 9999;
  overflow-x: hidden;
  overflow-y: hidden;
  height: 70px;
  width: 70px;
  margin: -20px auto 0;
}
.navbar-inverse .navbar-nav>li:nth-child(3)>a .fas {
  font-size: 1.4em;
  display: block;
  line-height: 48px;
  height: 42px;
  width: 42px;
  overflow: hidden;
}
li.link-active[_ngcontent-c1] a[_ngcontent-c1], 
li.link-active[_ngcontent-c1] a[_ngcontent-c1]:hover, 
li.link-active[_ngcontent-c1] a[_ngcontent-c1]:focus {
  background-color: #B4261B !important;
  color: white;
}
.navbar-collapse {padding: 0 !important;}
.collapse {display: unset !important;}
.fa, .fas {
  font-size: 1.8em;
  display: block;
}

  /* Home Styles */
  
  .home-logo-header {
    background-color: #EE493B;
    text-align: center;
    padding: 50px 0 20px;
    margin: 0 0 50px;
  }
  .home-logo-header h1 {
    background-image: url("assets/logo.png");
    width: 154px;
    height: 159px;
    margin: 0 auto 20px;
    overflow: hidden;
    line-height: 99999;
  }
 .form-group input {
    border-bottom: 1px solid #EE493B;
    border-top: 0;
    border-left: 0;
    border-right: 0;
    border-radius: 0;
    padding: 8px 0 8px 35px;
    height: unset;
    font-size: 1.2em;
    color: #EE492B;
    box-shadow: unset;

    background-repeat: no-repeat;
    background-position-x: 8px;
    background-position-y: 14px;
  }
.form-group input[type="text"] {
    background-image: url("assets/icon-email.png");
}
.form-group input[type="password"] {
  background-image: url("assets/icon-password.png");
}
app-home .form-group label {display:none;}
app-home .btn-primary {
    color: #fff;
    background-color: #EE493B;
    width: 100%;
    margin: 20px 0 35px;
    border-radius: 0;
    border: 0;
    padding: 10px 0;
    text-transform: uppercase;
    font-size: 1.2em;
    font-weight: 400;
}
.social-login {
  text-align: center;
  color: #EE493B;
}
.social-login a {
  color: #EE493B;
}
.social-login span {
  margin: 0 6px;
}
.social-login .fa-2x {
  font-size: 1.5em;
}
.social-login .fa-stack {
  height: 2.5em;
  line-height: 2.5em;
  width: 2.5em;
}
.social-login .fa-stack-2x {
  border: 2px solid #EE493B;
  padding: 24px 0px;
  border-radius: 26px;
}
.social-login .fa-circle:before {
  content: unset;
}
app-home a.btn {
    color: #EE493B;
    text-align: center;
    margin: 15px auto 30px;
    font-size: 1.3em;
    display: block;
}    

/* Inside Screen Styles */
  
.content-header {
  background-color: #EE493B;
  text-align: center;
  padding: 30px 0px;
  margin: 0 0 14px;
}
.content-header i {
  color: #fff;
  float: left;
  position: absolute;
  top: 56px;
  left: 24px;
}
.content-header h1 {
  color: #fff;
  text-transform: uppercase;
  font-weight: 100;
}
.post-header-container {
  border-bottom: 1px solid #ccc;
  display: inline-block;
  width: 100%;
  padding: 2px 0 15px;
}
.motivational-quote {
  width:50%;
  float:left;
  text-align: left;
}
.motivational-quote p.title {
  font-weight: 600;
  font-size: 0.9em;
  margin: 12px 0 0;
}
.motivational-quote p.quote {
  color: #EE493B;
  font-size: 1.2em;
}
.todays-date {
  width:50%;
  float:right;
  text-align: right;
}
.todays-date p {
  color: #EE493B;
  font-size: 2.4em;
}
.todays-tasks {
  background-color: #EE493B;
  display: inline-block;
  color: #fff;
  font-weight: 600;
  font-size: 1.6em;
  padding: 12px 58px 12px 4%;
  border-radius: 0 35px 35px 0;
  margin: 12px 0 20px -4%;
}
.edit-tasks {
  float: right;
  display: inline-block;
  font-size: 1.3em;
  padding: 12px 0 12px 0;
  margin: 12px 0 20px 0;
  color: #999;
}
.task-list {
  border-bottom: 1px solid #999;
  display: inline-block;
  width: 100%;
  padding: 0 0 10px;
}
.task-list .task-list-name {
  width: 70%;
  float: left;
}
.task-list .task-list-name h3 {
  margin: 0;
  font-size: 1.1em;
  font-weight: 700;
}
.task-list .task-list-name .estimated-time {
  color: #EE493B;
  font-size: 1em;
  margin: 5px 0 0 0;
  display: block;
}
.task-list .task-list-name .priority-level {
  color: #999;
  display: block;
  font-size: 0.8em;
  margin: 5px 0 0;
}
.task-list .task-list-name > i {
  float: left;
  font-size: 12px;
  min-height: 60px;
  line-height: 5.2em;
  margin: 0 12px 0 0;
  color: #999;
}
.task-list .task-list-name .priority-level i.fa-circle {
  font-size: 10px;
  margin: 0 2px;
  color: #EE493B;
  display: inline-block;
}
.task-list .task-list-name .priority-level i.fa-circle-o {
  display: inline-block;
  width: 10px;
  border: 1px solid #EE493B;
  height: 10px;
  border-radius: 10px;
  margin: 0 2px;
}
.task-list .task-list-start-button {
  width: 25%;
  float: left;
  margin: 14px 0 0 0;
}
.task-list .task-list-start-button .btn {
  background-color: #fff;
  border: 1px solid #EE493B;
  color: #EE493B;
}


/* Add Tasks */
app-add-task div.form-group {
  border-bottom: 1px solid #ccc;
  padding: 5px 0 25px;
}
app-add-task div.form-group label {
  color: #EE493B;
  font-size: 1.8em;
}
app-add-task div.form-group input.form-control.task-name {
  font-size: 1.8em;
  background-image: unset;
  border: 1px solid #EE493B;
  padding-left: 18px;
  color: #999;
}
app-add-task div.form-group select {
    font-size: 1.5em;
    background-image: unset;
    border: 1px solid #EE493B;
    color: #999;
    height: unset;
    padding: 14px 12px;
    border-radius: 0;
}
app-add-task div.form-group.sync-device {
  background-color: rgba(238,73,59, 0.12);
  border-radius: 75px;
  text-align: center;
  margin: 0 20%;
  padding: 20px 0;
}
app-add-task div.form-group.sync-device h2 {
  color: #EE493B;
  text-transform: lowercase;
  font-weight: 700;
  display: inline-block;
  margin:0;
}
app-add-task div.form-group.sync-device .slider.round {
  background-color: #EE493B;
}
app-add-task div.form-group.sync-device .switch {
  margin: 0 0 -6px 12px;
}
app-add-task .btn-primary {
  color: #fff;
  background-color: #EE493B;
  width: 100%;
  margin: 38px 0 0;
  border-radius: 0;
  border: 0;
  padding: 18px 0;
  text-transform: uppercase;
  font-size: 1.5em;
  font-weight: 400;
}

/* Edit Settings */
app-settings .edit-row-container {
  border-bottom: 1px solid #ccc;
  display: inline-block;
  width: 100%;
  margin: 0 0 18px;
  padding: 0 0 10px;
}
app-settings h2 {
  color: #EE493B;
  font-size: 1.8em;
  margin-bottom: 5px;
  font-weight: 700;
  display: inline;
}
app-settings .switch {
  float: right;
}
app-settings .slider.round {
  background-color: #EE493B;
}
app-settings .form-group {
  float: left;
  width: 100%;
  margin-bottom: 10px;
}
app-settings input.form-check-input {
  float:right;
  height: 25px;
  width: 25px;
  margin-right: 15px;
}
app-settings label.form-check-label {
  float: left;
  font-weight: 100;
  font-size: 1.3em;
  color: #666;
}
app-settings div.form-group.sync-device {
  background-color: rgba(238,73,59, 0.12);
  border-radius: 75px;
  text-align: center;
  margin: 0 20%;
  padding: 20px 0;
  display: block;
  width: unset;
  float: unset;
}
app-settings div.form-group.sync-device h2 {
  color: #EE493B;
  text-transform: lowercase;
  font-weight: 700;
  display: inline-block;
  margin:0;
}
app-settings div.form-group.sync-device .slider.round {
  background-color: #EE493B;
}
app-settings div.form-group.sync-device .switch {
  margin: 0 0 -14px 12px;
  float: unset;
}
app-settings .btn-primary {
  color: #fff;
  background-color: #EE493B;
  width: 100%;
  margin: 38px 0 0;
  border-radius: 0;
  border: 0;
  padding: 18px 0;
  text-transform: uppercase;
  font-size: 1.5em;
  font-weight: 400;
}
/* Slider */
.horizontal-slidecontainer {
  width: 100%;
  margin: 28px 0 0 0;
}
.horizontal-slidecontainer p {
  margin: 28px 0 0 0;
}

.horizontal-slider {
  -webkit-appearance: none;
  height: 6px !important;
  background: #EE492B;
  outline: none;
  -webkit-transition: .2s;
  -webkit-transition: opacity .2s;
  transition: opacity .2s;
  padding: 0px !important;
  border-bottom: unset !important;
}

.horizontal-slider:hover {
  opacity: 1;
}

.horizontal-slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background: #FFFFFF;
  border: 5px solid #EE492B;
  cursor: pointer;
}

.horizontal-slider::-moz-range-thumb {
  width: 25px;
  height: 25px;
  border-radius: 50%;
  background: #4CAF50;
  cursor: pointer;
}
/* Mobile View */
@media (max-width: 768px) {
  .content-container {
    padding: 0 5% 0%;
  }
  .content-container.tasks {
    padding: 0 0 24%;
  }
  .col-sm-9 {
    width:100% !important;
    padding:0 !important;
    margin:0 !important;
  }
  .col-md-6 {
    margin: 0 auto !important;
    float: unset !important;
  }
  app-add-task div.form-group.sync-device,
  app-settings div.form-group.sync-device {
    margin: 0 6%;
    padding: 12px 0;
  }
  app-add-task div.form-group.sync-device h2,
  app-settings div.form-group.sync-device h2 {
    font-size: 1.2em;
    margin: 0px 0 12px 0;
  }
  app-add-task .btn-primary,
  app-settings .btn-primary {
    width: 111%;
    margin: 38px 0 0 -6%;
  }
}

